--- a/dashboard.html
+++ b/dashboard.html
@@ -179,7 +179,7 @@
               <ul class="activity-list">
                 <li class="activity-item">
                   <p>You have a property inspection coming up in three days</p>
-                  <a href="createnewinspection.html">Set reminder</a>
+                  <a href="details.html">Set reminder</a>
                 </li>
                 <li class="activity-item">
                   <p>
@@ -200,7 +200,7 @@
                     Mustapha Onasanya sent a new property inspection for
                     Rovenheight homes
                   </p>
-                  <a href="index.html">See inspection</a>
+                  <a href="report.html">See inspection</a>
                 </li>
               </ul>
             </div>
