--- a/createnewinspection.html
+++ b/createnewinspection.html
@@ -127,8 +127,8 @@
         <!-- div container holdeing the pre-loss and post-loss, select options -->
 
         <div class="wrapper">
-          <div class="inspection-options">
-          <div class="option pre-loss active">
+          <div class="inspection-options"  id="jaj">
+          <div class="option pre-loss active" id="kenya">
             <img src="images/preloss.png" alt="Pre-loss Inspection" />
           </div>
           <div class="option post-loss">
