--- a/pre-loss.html
+++ b/pre-loss.html
@@ -199,9 +199,12 @@
                   <div class="icon-placeholder">
                     <!-- <div class="phone-prefix"> -->
 
-                    <select id="phone-prefix">
-                      <option value="+234">+234</option>
-                    </select>
+                      <select id="phone-prefix">
+                        <option value="+234">+234</option>
+                        <option value="+234">+433</option>
+                        <option value="+234">+971</option>
+                        <option value="+234">+682</option>
+                      </select>
 
                     <input type="text" id="phone-number" />
                     <!-- </div> -->
@@ -239,7 +242,12 @@
                   <label for="state">State</label>
                   <div class="icon-placeholder">
                     <select id="state">
-                      <option value="">Select a language</option>
+                      <option value="">Select a state</option>
+                      <option value="">Kaduna</option>
+                      <option value="">Abuja</option>
+                      <option value="">Lagos</option>
+                      <option value="">Osun</option>
+                      <option value="">Kano</option>
                     </select>
                   </div>
                 </div>
@@ -247,7 +255,14 @@
                   <label for="lga">LGA</label>
                   <div class="icon-placeholder">
                     <select id="lga">
-                      <option value="">Select a language</option>
+                      <option value="">Select a lga</option>
+                      <option value="">South</option>
+                      <option value="">North</option>
+                      <option value="">Chikun</option>
+                      <option value="">Igara</option>
+                      <option value="">Kachia</option>
+                      <option value="">Lere</option>
+                      <option value="">Makarfi</option>
                     </select>
                   </div>
                 </div>
