--- a/pre-loss.html
+++ b/pre-loss.html
@@ -106,7 +106,7 @@
               <img src="images/group38.png" />
               <select name="navigation" class="user" id="choose">
                 <option value="dashboard.html">Godwin</option>
-                 <option value="details.html">Details</option></a>
+                <option value="details.html">Details</option>
                 <option value="report.html">Report</option>
                 <option value="createnewinspection.html">Sign-up</option>
                 <option value="index.html">Log-out</option>
@@ -135,6 +135,9 @@
 
           <section>
             <div class="form-container">
+              <div id="alert-message" class="alert-message">
+                Please fill in all required fields before proceeding.
+              </div>
               <div class="form-title">Pre-Loss Inspection - Property</div>
 
               <hr />
@@ -199,12 +202,12 @@
                   <div class="icon-placeholder">
                     <!-- <div class="phone-prefix"> -->
 
-                      <select id="phone-prefix">
-                        <option value="+234">+234</option>
-                        <option value="+234">+433</option>
-                        <option value="+234">+971</option>
-                        <option value="+234">+682</option>
-                      </select>
+                    <select id="phone-prefix">
+                      <option value="+234">+234</option>
+                      <option value="+234">+433</option>
+                      <option value="+234">+971</option>
+                      <option value="+234">+682</option>
+                    </select>
 
                     <input type="text" id="phone-number" />
                     <!-- </div> -->
