--- a/details.html
+++ b/details.html
@@ -36,7 +36,7 @@
               </a>
             </li>
             <li>
-              <a href="pre-loss.html" class="active">
+              <a href="inspectionlist.html" class="active">
                 <img src="images/icon2.png" alt="" />
               </a>
             </li>
@@ -47,7 +47,7 @@
               <a href="createnewinspection.html"><img src="images/icon4.png" alt="" /></a>
             </li>
             <li>
-              <a href="index.html"
+              <a href="details.html"
                 ><img src="images/icon5.png" alt=""
               /></a>
             </li>
