--- a/inspectionlist.html
+++ b/inspectionlist.html
@@ -49,7 +49,7 @@
               /></a>
             </li>
             <li>
-              <a href="index.html"
+              <a href="inspectionlist.html"
                 ><img src="images/icon6.png" alt=""
               /></a>
             </li>
