--- a/report.html
+++ b/report.html
@@ -52,7 +52,7 @@
               /></a>
             </li>
             <li>
-              <a href="index.html"
+              <a href="#"
                 ><img src="images/icon6.png" alt="Icon6"
               /></a>
             </li>
