--- a/dashboard.html
+++ b/dashboard.html
@@ -101,7 +101,7 @@
             <div class="hamburger" id="hamburger">
               <img src="images/hamburger1.svg" alt="icon" id="ham" />
               <img
-                src="images/cancel.png"
+                src="images/cancel.svg"
                 alt="icon"
                 id="canc"
                 style="display: none"
