--- a/post-loss.html
+++ b/post-loss.html
@@ -91,9 +91,9 @@
         <div class="main-content">
           <div class="top-container">
             <div class="hamburger" id="hamburger">
-              <img src="images/hamburger.svg" alt="icon" id="ham" />
+              <img src="images/hamburger1.svg" alt="icon" id="ham" />
               <img
-                src="images/cancel.png"
+                src="images/cancel.svg"
                 alt="icon"
                 id="canc"
                 style="display: none"
@@ -388,7 +388,7 @@
             cancel.style.marginLeft = "50px";
             hamburger.style.display = "none";
             logoContainer.style.display = "none";
-            main.style.marginLeft = "0";
+            main.style.marginLeft = "130px";
           }
         });
 
