--- a/report.html
+++ b/report.html
@@ -96,9 +96,9 @@
       <div class="main-content">
         <div class="top-container">
           <div class="hamburger" id="hamburger">
-            <img src="images/hamburger.svg" alt="icon" id="ham" />
+            <img src="images/hamburger1.svg" alt="icon" id="ham" />
             <img
-              src="images/cancel.png"
+              src="images/cancel.svg"
               alt="icon"
               id="canc"
               style="display: none"
