--- a/createnewinspection.html
+++ b/createnewinspection.html
@@ -86,9 +86,9 @@
         <div class="top-container">
 
           <div class="hamburger" id="hamburger">
-            <img src="images/hamburger.svg" alt="icon" id="ham" />
+            <img src="images/hamburger1.svg" alt="icon" id="ham" />
             <img
-              src="images/cancel.png"
+              src="images/cancel.svg"
               alt="icon"
               id="canc"
               style="display: none"
