--- a/details.html
+++ b/details.html
@@ -92,9 +92,9 @@
         <div class="main-content">
           <div class="top-container">
             <div class="hamburger" id="hamburger">
-              <img src="images/hamburger.svg"icon" id="ham" />
+              <img src="images/hamburger1.svg"icon" id="ham" />
               <img
-                src="images/cancel.png"
+                src="images/cancel.svg"
                 alt="icon"
                 id="canc"
                 style="display: none"
@@ -106,7 +106,7 @@
             <img src="images/group38.png" />
             <select name="navigation" class="user" id="choose">
               <option value="dashboard.html">Godwin</option>
-               <option value="details.html">Details</option></a>
+               <option value="details.html">Details</option>
               <option value="report.html">Report</option>
               <option value="createnewinspection.html">Sign-up</option>
               <option value="index.html">Log-out</option>
@@ -223,7 +223,7 @@
             cancel.style.marginLeft = "50px";
             hamburger.style.display = "none";
             logoContainer.style.display = "none";
-            main.style.marginLeft = "0";
+            main.style.marginLeft = "200px";
           }
         });
 
