--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <p>Welcome, Login to your portal account.</p>
         </div>
         <form id="loginForm" onsubmit="return validateForm();">
+          <!-- <div id="error-message" style="color: red; margin-top: 10px"></div> -->
           <div class="form-group">
             <label for="loginId">Login ID</label>
             <div>
@@ -114,7 +115,7 @@
         const showText = document.querySelector(".show");
         if (passwordInput.type === "password") {
           passwordInput.type = "text";
-          showText.textContent = "hide";
+          showText.textContent = "Hide";
         } else {
           passwordInput.type = "password";
           showText.textContent = "show";
