--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 class="show"
                 onclick="togglePasswordVisibility()"
               >
-                show
+                Show
               </button>
             </div>
             <div>
