--- a/report.html
+++ b/report.html
@@ -317,7 +317,7 @@
             cancel.style.marginLeft = "0";
             hamburger.style.display = "block";
             logoContainer.style.display = "none";
-            main.style.marginLeft = "0";
+            main.style.marginLeft = "170px";
           }
         });
       });
