--- a/pre-loss.html
+++ b/pre-loss.html
@@ -388,7 +388,7 @@
             cancel.style.marginLeft = "50px";
             hamburger.style.display = "none";
             logoContainer.style.display = "none";
-            main.style.marginLeft = "0";
+            main.style.marginLeft = "130px";
           }
         });
 
