--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p>Welcome, Login to your portal account.</p>
         </div>
         <form id="loginForm" onsubmit="return validateForm();">
-          <div id="error-message" style="color: red; margin-top: 10px"></div>
+          <!-- <div id="error-message" style="color: red; margin-top: 10px"></div> -->
           <div class="form-group">
             <label for="loginId">Login ID</label>
             <div>
@@ -79,7 +79,13 @@
             </div>
             <button class="reset" type="button">Reset Password</button>
           </div>
-          <button id="myBtn" type="submit" class="disabled-button" disabled>
+          <button
+            id="myBtn"
+            type="submit"
+            class="disabled-button"
+            onclick="validateForm()"
+            disabled
+          >
             Login
           </button>
         </form>
@@ -112,23 +118,21 @@
           showText.textContent = "Hide";
         } else {
           passwordInput.type = "password";
-          showText.textContent = "Show";
+          showText.textContent = "show";
         }
       }
 
       function validateForm() {
         const loginInput = document.getElementById("login");
         const passwordInput = document.getElementById("password");
-        const errorMessage = document.getElementById("error-message");
         if (loginInput.value === "admin" && passwordInput.value === "admin") {
-          errorMessage.textContent = "Wrong password.";
+          alert("Login successful!");
+          window.location.href = "./dashboard.html";
+          return true;
+        } else {
+          alert("Invalid login or password.");
           return false;
         }
-
-        // Add your actual login validation logic here
-        alert("Login successful!");
-        window.location.href = "./dashboard.html";
-        return true;
       }
 
       const loginInput = document.getElementById("login");
@@ -136,7 +140,7 @@
       const submitButton = document.getElementById("myBtn");
 
       function checkInputs() {
-        if (loginInput.value && passwordInput.value) {
+        if (loginInput.value === "admin" && passwordInput.value === "admin") {
           submitButton.disabled = false;
           submitButton.classList.remove("disabled-button");
         } else {
