--- a/index.html
+++ b/index.html
@@ -69,14 +69,24 @@
             </div>
           </div>
           <div class="log-status">
-            <div class="checkbox-wrapper-28">
+            <!-- <div class="checkbox-wrapper-28">
               <input
                 id="keepLoggedIn"
                 type="checkbox"
                 class="promoted-input-checkbox"
               />
               <label for="keepLoggedIn"> Keep me logged in </label>
+            </div> -->
+            <div class="checkbox-wrapper-1">
+              <input
+                id="example-1"
+                class="substituted"
+                type="checkbox"
+                aria-hidden="true"
+              />
+              <label for="example-1">Keep Me Logged In</label>
             </div>
+
             <button class="reset" type="button">Reset Password</button>
           </div>
           <button
